--- a/Code/Helpers/moduledatabasemodel.cachetracker.swift.liquid
+++ b/Code/Helpers/moduledatabasemodel.cachetracker.swift.liquid
@@ -6,7 +6,7 @@ import Foundation
 // Example:
 //  import CoreData
 //  class SomeModuleDatabaseModel: NSManagedObject, CacheTrackerDatabaseModel {
-//      // MARK: CacheTrackerDatabaseModel
+//      // MARK: - CacheTrackerDatabaseModel
 //      static func entityName() -> String {
 //          return NSStringFromClass(self)
 //      }
