--- a/Code/Helpers/moduleentitymodel.cachetracker.swift.liquid
+++ b/Code/Helpers/moduleentitymodel.cachetracker.swift.liquid
@@ -6,7 +6,7 @@ import Foundation
 // Example:
 //  import CacheTracker
 //  class SomeModuleEntityModel: CacheTrackerPlainModel {
-//      // MARK: CacheTrackerPlainModel
+//      // MARK: - CacheTrackerPlainModel
 //      required init() {}
 //  }
 //  More info at https://github.com/ladeiko/CacheTracker
