--- a/Code/Router/router.swift.liquid
+++ b/Code/Router/router.swift.liquid
@@ -2,12 +2,12 @@
 
 class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info.name }}RouterInput {
 
-    // MARK: Vars
-    // TODO
+    // MARK: - Vars
+    // TODO: Place your code here
 
-    // MARK: {{ prefix }}{{ module_info.name }}RouterInput
-    // TODO
+    // MARK: - {{ prefix }}{{ module_info.name }}RouterInput
+    // TODO: Place your code here
 
-    // MARK: Helpers
-    // TODO
+    // MARK: - Helpers
+    // TODO: Place your code here
 }
