--- a/Code/Service/actions/redux.swift.liquid
+++ b/Code/Service/actions/redux.swift.liquid
@@ -3,5 +3,5 @@
 import ReSwift
 
 struct {{ prefix }}{{ module_info.name }}ServiceDefaultAction: Action {
-    // TODO
+    // TODO: Place your code here
 }
