--- a/Code/Service/reducers/redux.swift.liquid
+++ b/Code/Service/reducers/redux.swift.liquid
@@ -8,7 +8,7 @@ func {{ prefix }}{{ module_info.name }}ServiceStateTopReducer(action: Action, st
 
     switch action {
     case _ as {{ prefix }}{{ module_info.name }}ServiceDefaultAction:
-        // TODO
+        // TODO: Place your code here
         break
 
     default: break
