--- a/Code/View/view_controller.collectionview.cachetracker.cell.swift.liquid
+++ b/Code/View/view_controller.collectionview.cachetracker.cell.swift.liquid
@@ -4,27 +4,27 @@ import UIKit
 
 class {{ prefix }}{{ module_info.name }}ViewCell: UICollectionViewCell {
 
-    // MARK: Outlets
-    // TODO
+    // MARK: - Outlets
+    // TODO: Place your code here
 
-    // MARK: Vars
-    // TODO
+    // MARK: - Vars
+    // TODO: Place your code here
 
-    // MARK: Public
+    // MARK: - Public
 
     func configure(with model: {{ prefix }}{{ module_info.name }}ModuleEntityModel) {
-        // TODO
+        // TODO: Place your code here
     }
 
     func willDisplay() {
-        // TODO
+        // TODO: Place your code here
     }
 
     func stopDisplay() {
-        // TODO
+        // TODO: Place your code here
     }
 
-    // MARK: Helpers
-    // TODO
+    // MARK: - Helpers
+    // TODO: Place your code here
 
 }
