--- a/Code/View/view_controller.swift.liquid
+++ b/Code/View/view_controller.swift.liquid
@@ -4,29 +4,29 @@ import UIKit
 
 class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, {{ prefix }}{{module_info.name}}ViewInput {
 
-    // MARK: VIPER Vars
+    // MARK: - VIPER Vars
 
     var output: {{ prefix }}{{ module_info.name }}ViewOutput!
 
-    // MARK: Outlets
-    // TODO
+    // MARK: - Outlets
+    // TODO: Place your code here
 
-    // MARK: Vars
-    // TODO
+    // MARK: - Vars
+    // TODO: Place your code here
 
-    // MARK: Life cycle
+    // MARK: - Life cycle
 
     override func viewDidLoad() {
         super.viewDidLoad()
         output.viewIsReady()
     }
 
-    // MARK: {{ prefix }}{{module_info.name}}ViewInput
-    // TODO
+    // MARK: - {{ prefix }}{{module_info.name}}ViewInput
+    // TODO: Place your code here
 
-    // MARK: UI Actions
-    // TODO
+    // MARK: - UI Actions
+    // TODO: Place your code here
 
-    // MARK: Helpers
-    // TODO
+    // MARK: - Helpers
+    // TODO: Place your code here
 }
