--- a/Code/View/view_controller.tabbar.swift.liquid
+++ b/Code/View/view_controller.tabbar.swift.liquid
@@ -4,18 +4,18 @@ import UIKit
 
 class {{ prefix }}{{ module_info.name }}ViewController: UITabBarController, {{ prefix }}{{module_info.name}}ViewInput {
 
-    // MARK: VIPER Vars
+    // MARK: - VIPER Vars
 
     var output: {{ prefix }}{{ module_info.name }}ViewOutput!
     private var viewIsReadyCalled = false
 
-    // MARK: Outlets
-    // TODO
+    // MARK: - Outlets
+    // TODO: Place your code here
 
-    // MARK: Vars
-    // TODO
+    // MARK: - Vars
+    // TODO: Place your code here
 
-    // MARK: Life cycle
+    // MARK: - Life cycle
 
     override func viewDidLoad() {
         super.viewDidLoad()
@@ -32,12 +32,12 @@ class {{ prefix }}{{ module_info.name }}ViewController: UITabBarController, {{ p
         super.viewWillAppear(animated)
     }
 
-    // MARK: {{ prefix }}{{module_info.name}}ViewInput
-    // TODO
+    // MARK: - {{ prefix }}{{module_info.name}}ViewInput
+    // TODO: Place your code here
 
-    // MARK: UI Actions
-    // TODO
+    // MARK: - UI Actions
+    // TODO: Place your code here
 
-    // MARK: Helpers
-    // TODO
+    // MARK: - Helpers
+    // TODO: Place your code here
 }
