--- a/Code/View/view_controller.transparent.swift.liquid
+++ b/Code/View/view_controller.transparent.swift.liquid
@@ -5,18 +5,18 @@ import TransparentProxyViewController
 
 class {{ prefix }}{{ module_info.name }}ViewController: TransparentProxyViewController, {{ prefix }}{{module_info.name}}ViewInput {
 
-    // MARK: VIPER Vars
+    // MARK: - VIPER Vars
 
     var output: {{ prefix }}{{ module_info.name }}ViewOutput!
 
-    // MARK: Outlets
-    // TODO
+    // MARK: - Outlets
+    // TODO: Place your code here
 
-    // MARK: Vars
+    // MARK: - Vars
 
     private final var shown = false
 
-    // MARK: Life cycle
+    // MARK: - Life cycle
 
     override func viewDidLoad() {
         super.viewDidLoad()
@@ -31,13 +31,13 @@ class {{ prefix }}{{ module_info.name }}ViewController: TransparentProxyViewCont
         }
     }
 
-    // MARK: {{ prefix }}{{module_info.name}}ViewInput
-    // TODO
+    // MARK: - {{ prefix }}{{module_info.name}}ViewInput
+    // TODO: Place your code here
 
-    // MARK: UI Actions
-    // TODO
+    // MARK: - UI Actions
+    // TODO: Place your code here
 
-    // MARK: Helpers
+    // MARK: - Helpers
 
     private final func showController() {
         // TODO Show your real controller like UIAlertController, etc.
