--- a/Tests/Interactor/interactor_tests.cachetracker.swift.liquid
+++ b/Tests/Interactor/interactor_tests.cachetracker.swift.liquid
@@ -17,10 +17,10 @@ class {{ prefix }}{{ module_info.name }}InteractorTests: XCTestCase {
 
     class MockPresenter: {{ prefix }}{{ module_info.name }}InteractorOutput {
 
-        // MARK: Vars
-        // TODO
+        // MARK: - Vars
+        // TODO: Place your code here
 
-        // MARK: {{ prefix }}{{ module_info.name }}InteractorOutput
+        // MARK: - {{ prefix }}{{ module_info.name }}InteractorOutput
 
         func modelsListDidReset(_ initialState: [CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEntityModel>]) {
 
