--- a/Tests/Interactor/interactor_tests.swift.liquid
+++ b/Tests/Interactor/interactor_tests.swift.liquid
@@ -16,11 +16,11 @@ class {{ prefix }}{{ module_info.name }}InteractorTests: XCTestCase {
 
     class MockPresenter: {{ prefix }}{{ module_info.name }}InteractorOutput {
 
-        // MARK: Vars
-        // TODO
+        // MARK: - Vars
+        // TODO: Place your code here
 
-        // MARK: {{ prefix }}{{ module_info.name }}InteractorOutput
-        // TODO
+        // MARK: - {{ prefix }}{{ module_info.name }}InteractorOutput
+        // TODO: Place your code here
 
     }
 }
