--- a/Tests/Presenter/presenter_tests.complex.cachetracker.swift.liquid
+++ b/Tests/Presenter/presenter_tests.complex.cachetracker.swift.liquid
@@ -18,11 +18,11 @@ class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
 
     class MockInteractor: {{ prefix }}{{ module_info.name }}InteractorInput {
 
-        // MARK: Vars
+        // MARK: - Vars
 
         private final var tracking = false
 
-        // MARK: {{ prefix }}{{ module_info.name }}InteractorInput
+        // MARK: - {{ prefix }}{{ module_info.name }}InteractorInput
 
         func isDeliveringModelsListChanges() -> Bool {
             return tracking
@@ -48,10 +48,10 @@ class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
         weak var calleeOutput: (RamblerViperModuleOutput /* Add supported protocols here, e.g: & AnotherModuleOutput */)!
         weak var transitionHandler: RamblerViperModuleTransitionHandlerProtocol!
 
-        // MARK: Vars
-        // TODO
+        // MARK: - Vars
+        // TODO: Place your code here
 
-        // MARK: {{ prefix }}{{ module_info.name }}RouterInput
+        // MARK: - {{ prefix }}{{ module_info.name }}RouterInput
 
         func createEmbeddableModule(with model: {{ prefix }}{{ module_info.name }}ModuleEntityModel, lazyAllocation: Bool) -> {{ prefix }}{{ module_info.name }}EmbeddableEmbedBlock {
 
@@ -79,10 +79,10 @@ class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
 
     class MockViewController: {{ prefix }}{{ module_info.name }}ViewInput {
 
-        // MARK: Vars
-        // TODO
+        // MARK: - Vars
+        // TODO: Place your code here
 
-        // MARK: {{ prefix }}{{ module_info.name }}ViewInput
+        // MARK: - {{ prefix }}{{ module_info.name }}ViewInput
 
         func loadInitialModelsList(_ state: [CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel>]) {
 
