--- a/Code/Helpers/embeddable_module.swift.liquid
+++ b/Code/Helpers/embeddable_module.swift.liquid
@@ -2,6 +2,6 @@
 
 import UIKit
 
-typealias {{ prefix }}{{ module_info.name }}EmbeddableModuleInput = SomeEmbeddableModuleInput // TODO
+typealias {{ prefix }}{{ module_info.name }}EmbeddableModuleInput = SomeEmbeddableModuleInput // TODO: Place your code here
 {% if custom_parameters.embeddable_extended_configure %}typealias {{ prefix }}{{ module_info.name }}EmbeddableModuleInputConfig = SomeEmbeddableModuleInputConfig // TODO{% endif %}
-typealias {{ prefix }}{{ module_info.name }}EmbeddableModuleConfigurator = SomeEmbeddableModuleConfigurator // TODO
+typealias {{ prefix }}{{ module_info.name }}EmbeddableModuleConfigurator = SomeEmbeddableModuleConfigurator // TODO: Place your code here
