--- a/Code/Helpers/moduleinputconfig.alert.swift.liquid
+++ b/Code/Helpers/moduleinputconfig.alert.swift.liquid
@@ -3,5 +3,5 @@
 struct {{ prefix }}{{ module_info.name }}ModuleInputConfig {
     let title: String?
     let message: String?
-    // TODO
+    // TODO: Place your code here
 }
