--- a/Code/Helpers/moduleinputconfig.swift.liquid
+++ b/Code/Helpers/moduleinputconfig.swift.liquid
@@ -4,5 +4,5 @@ struct {{ prefix }}{{ module_info.name }}ModuleInputConfig {
     {% if custom_parameters.extended_configure_vars %}{% assign module_config_vars = custom_parameters.extended_configure_vars  | split: "," %}
     {% for config_var in module_config_vars %}{% assign var_components = config_var  | split: "=" %}let {{ var_components[0] }}: {{ var_components[1] }}
     {% endfor %}{% endif %}
-    // TODO
+    // TODO: Place your code here
 }
