--- a/Code/Interactor/interactor.swift.liquid
+++ b/Code/Interactor/interactor.swift.liquid
@@ -2,16 +2,16 @@
 
 class {{ prefix }}{{ module_info.name }}Interactor: {{ prefix }}{{ module_info.name }}InteractorInput {
 
-    // MARK: VIPER Vars
+    // MARK: - VIPER Vars
 
     weak var output: {{ prefix }}{{ module_info.name }}InteractorOutput!
 
-    // MARK: Vars
-    // TODO
+    // MARK: - Vars
+    // TODO: Place your code here
 
-    // MARK: {{ prefix }}{{ module_info.name }}InteractorInput
-    // TODO
+    // MARK: - {{ prefix }}{{ module_info.name }}InteractorInput
+    // TODO: Place your code here
 
-    // MARK: Helpers
-    // TODO
+    // MARK: - Helpers
+    // TODO: Place your code here
 }
