--- a/Code/Presenter/presenter.swift.liquid
+++ b/Code/Presenter/presenter.swift.liquid
@@ -10,7 +10,7 @@ fileprivate enum {{ prefix }}{{ module_info.name }}PresenterState {
 
 class {{ prefix }}{{ module_info.name }}Presenter: NSObject, {{ prefix }}{{ module_info.name }}ModuleInput, {{ prefix }}{{ module_info.name }}ViewOutput, {{ prefix }}{{ module_info.name }}InteractorOutput {
 
-    // MARK: VIPER Vars
+    // MARK: - VIPER Vars
 
     weak var view: {{ prefix }}{{ module_info.name }}ViewInput!
     var interactor: {{ prefix }}{{ module_info.name }}InteractorInput!
@@ -18,40 +18,40 @@ class {{ prefix }}{{ module_info.name }}Presenter: NSObject, {{ prefix }}{{ modu
     weak var output: {{ prefix }}{{module_info.name}}ModuleOutput?
     private final var state: {{ prefix }}{{ module_info.name }}PresenterState = .initial
 
-    // MARK: Vars
-    // TODO
+    // MARK: - Vars
+    // TODO: Place your code here
 
-    // MARK: Life cycle
+    // MARK: - Life cycle
 
     func willDeinit() {
         if state == .ready {
-            // TODO
+            // TODO: Place your code here
         }
         state = .deinitialized
     }
 
-    // MARK: {{ prefix }}{{module_info.name}}ViewOutput
+    // MARK: - {{ prefix }}{{module_info.name}}ViewOutput
 
     func viewIsReady() {
         assert(state == .ready)
-        // TODO
+        // TODO: Place your code here
     }
 
-    // MARK: {{ prefix }}{{module_info.name}}ModuleInput
+    // MARK: - {{ prefix }}{{module_info.name}}ModuleInput
 
     {% if custom_parameters.extended_configure %}func configure(with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig) {% else %}func configure() {% endif %}{
         assert(state == .initial)
         state = .ready
-        // TODO
+        // TODO: Place your code here
     }
 
     func setOutput(_ output: {{ prefix }}{{ module_info.name }}ModuleOutput) {
         self.output = output
     }
 
-    // MARK: {{ prefix }}{{ module_info.name }}InteractorOutput
-    // TODO
+    // MARK: - {{ prefix }}{{ module_info.name }}InteractorOutput
+    // TODO: Place your code here
 
-    // MARK: Helpers
-    // TODO
+    // MARK: - Helpers
+    // TODO: Place your code here
 }
