--- a/Code/Router/router.mcflurry.embed.swift.liquid
+++ b/Code/Router/router.mcflurry.embed.swift.liquid
@@ -4,12 +4,12 @@ import ViperMcFlurryX
 
 class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info.name }}RouterInput {
 
-    // MARK: VIPER Vars
+    // MARK: - VIPER Vars
 
     weak var calleeOutput: (RamblerViperModuleOutput /* Add supported protocols here, e.g: & AnotherModuleOutput */)!
     weak var transitionHandler: RamblerViperModuleTransitionHandlerProtocol!
 
-    // MARK: {{ prefix }}{{ module_info.name }}RouterInput
+    // MARK: - {{ prefix }}{{ module_info.name }}RouterInput
 
     func embedSomeModule() {
         transitionHandler.openModule!(usingSegue: "EmbedSomeModuleSegue").thenChain { (module) -> RamblerViperModuleOutput? in
@@ -41,7 +41,7 @@ class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info.name 
     }
     */
 
-    // MARK: Helpers
-    // TODO
+    // MARK: - Helpers
+    // TODO: Place your code here
 
 }
