--- a/Code/Router/router.mcflurry.swift.liquid
+++ b/Code/Router/router.mcflurry.swift.liquid
@@ -4,15 +4,15 @@ import ViperMcFlurryX
 
 class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info.name }}RouterInput {
 
-    // MARK: VIPER Vars
+    // MARK: - VIPER Vars
 
     weak var calleeOutput: (RamblerViperModuleOutput /* Add supported protocols here, e.g: & AnotherModuleOutput */)!
     weak var transitionHandler: RamblerViperModuleTransitionHandlerProtocol!
 
-    // MARK: Vars
-    // TODO
+    // MARK: - Vars
+    // TODO: Place your code here
 
-    // MARK: {{ prefix }}{{ module_info.name }}RouterInput
+    // MARK: - {{ prefix }}{{ module_info.name }}RouterInput
 
     /*  // Example
     func dismiss() {
@@ -36,7 +36,7 @@ class {{ prefix }}{{ module_info.name }}Router: {{ prefix }}{{ module_info.name 
     }
     */
 
-    // MARK: Helpers
-    // TODO
+    // MARK: - Helpers
+    // TODO: Place your code here
 
 }
