--- a/Code/Service/Default.swift.liquid
+++ b/Code/Service/Default.swift.liquid
@@ -1,5 +1,5 @@
 {% include 'header' %}
 
 protocol {{ prefix }}{{ module_info.name }}Service: class {
-    // TODO
+    // TODO: Place your code here
 }
