--- a/Code/View/view_controller.complex.collectionview.cachetracker.cell.swift.liquid
+++ b/Code/View/view_controller.complex.collectionview.cachetracker.cell.swift.liquid
@@ -4,17 +4,17 @@ import UIKit
 
 class {{ prefix }}{{ module_info.name }}ViewCell: UICollectionViewCell {
 
-    // MARK: Outlets
-    // TODO
+    // MARK: - Outlets
+    // TODO: Place your code here
 
-    // MARK: Vars
+    // MARK: - Vars
 
     private var removeEmbeddableBlock: {{ prefix }}{{ module_info.name }}EmbeddableRemoveBlock?
 
-    // MARK: Public
+    // MARK: - Public
 
     func configure(with model: {{ prefix }}{{ module_info.name }}ModuleEntityModel) {
-        // TODO
+        // TODO: Place your code here
     }
 
     func willDisplay(_ embeddable: {{ prefix }}{{ module_info.name }}Embeddable) {
@@ -26,7 +26,7 @@ class {{ prefix }}{{ module_info.name }}ViewCell: UICollectionViewCell {
         removeEmbeddable()
     }
 
-    // MARK: Life cycle
+    // MARK: - Life cycle
 
     deinit {
         removeEmbeddable()
@@ -37,13 +37,13 @@ class {{ prefix }}{{ module_info.name }}ViewCell: UICollectionViewCell {
         super.prepareForReuse()
     }
 
-    // MARK: Helpers
+    // MARK: - Helpers
 
     private func removeEmbeddable() {
         removeEmbeddableBlock?()
         removeEmbeddableBlock = nil
     }
 
-    // TODO
+    // TODO: Place your code here
 
 }
