--- a/Code/View/view_controller.complex.tableview.cachetracker.swift.liquid
+++ b/Code/View/view_controller.complex.tableview.cachetracker.swift.liquid
@@ -6,19 +6,19 @@ import CacheTrackerConsumer
 
 class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITableViewDataSource, UITableViewDelegate, {{ prefix }}{{module_info.name}}ViewInput {
 
-    // MARK: VIPER Vars
+    // MARK: - VIPER Vars
 
     var output: {{ prefix }}{{ module_info.name }}ViewOutput!
 
-    // MARK: Outlets
+    // MARK: - Outlets
 
     @IBOutlet weak var tableView: UITableView!
 
-    // MARK: Vars
+    // MARK: - Vars
 
     private final let consumer: CacheTrackerPlainRecurrentConsumer<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel> = CacheTrackerPlainRecurrentConsumer<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel>()
 
-    // MARK: Life cycle
+    // MARK: - Life cycle
 
     override func viewDidLoad() {
         super.viewDidLoad()
@@ -27,7 +27,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITabl
         output.viewIsReady()
     }
 
-    // MARK: {{ prefix }}{{module_info.name}}ViewInput
+    // MARK: - {{ prefix }}{{module_info.name}}ViewInput
 
     func loadInitialModelsList(_ state: [CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEmbeddableModel>]) {
         consumer.reset(with: state)
@@ -40,8 +40,8 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITabl
         consumer.didChange()
     }
 
-    // MARK: UI Actions
-    // TODO
+    // MARK: - UI Actions
+    // TODO: Place your code here
 
     // MARK: - UITableViewDataSource
 
@@ -60,7 +60,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITabl
         return cell
     }
 
-    // MARK: UITableViewDelegate
+    // MARK: - UITableViewDelegate
 
     func tableView(_ tableView: UITableView, willDisplay cell: UITableViewCell, forRowAt indexPath: IndexPath) {
         let cell = cell as! {{ prefix }}{{ module_info.name }}ViewCell
@@ -75,17 +75,17 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, UITabl
 
     func tableView(_ tableView: UITableView, didSelectRowAt indexPath: IndexPath) {
         //let item = consumer.object(at: indexPath.row)
-        // TODO
+        // TODO: Place your code here
     }
 
-    // MARK: Helpers
+    // MARK: - Helpers
 
     private final func setupConsumer() {
         consumer.delegate = tableView
     }
 
     private final func setupTableView() {
-        // TODO
+        // TODO: Place your code here
     }
 
 }
