--- a/Code/View/view_controller.embed.swift.liquid
+++ b/Code/View/view_controller.embed.swift.liquid
@@ -5,33 +5,33 @@ import RamblerSegues
 
 class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, RamblerEmbedSegueViewContainer, {{ prefix }}{{module_info.name}}ViewInput {
 
-    // MARK: VIPER Vars
+    // MARK: - VIPER Vars
 
     var output: {{ prefix }}{{ module_info.name }}ViewOutput!
 
-    // MARK: Outlets
-    // TODO
+    // MARK: - Outlets
+    // TODO: Place your code here
 
     // see https://github.com/rambler-digital-solutions/RamblerSegues
     @IBOutlet weak var embedSomeModuleSegueContainer: UIView!
 
-    // MARK: Vars
-    // TODO
+    // MARK: - Vars
+    // TODO: Place your code here
 
-    // MARK: Life cycle
+    // MARK: - Life cycle
 
     override func viewDidLoad() {
         super.viewDidLoad()
         output.viewIsReady()
     }
 
-    // MARK: {{ prefix }}{{module_info.name}}ViewInput
-    // TODO
+    // MARK: - {{ prefix }}{{module_info.name}}ViewInput
+    // TODO: Place your code here
 
-    // MARK: UI Actions
-    // TODO
+    // MARK: - UI Actions
+    // TODO: Place your code here
 
-    // MARK: RamblerEmbedSegueViewContainer
+    // MARK: - RamblerEmbedSegueViewContainer
 
     func view(forEmbedIdentifier embedIdentifier: String!) -> UIView! {
         switch embedIdentifier {
@@ -43,6 +43,6 @@ class {{ prefix }}{{ module_info.name }}ViewController: UIViewController, Ramble
         }
     }
 
-    // MARK: Helpers
-    // TODO
+    // MARK: - Helpers
+    // TODO: Place your code here
 }
