--- a/Code/View/view_controller.root_collectionview.cachetracker.swift.liquid
+++ b/Code/View/view_controller.root_collectionview.cachetracker.swift.liquid
@@ -6,18 +6,18 @@ import CacheTrackerConsumer
 
 class {{ prefix }}{{ module_info.name }}ViewController: UICollectionViewController, {{ prefix }}{{module_info.name}}ViewInput {
 
-    // MARK: VIPER Vars
+    // MARK: - VIPER Vars
 
     var output: {{ prefix }}{{ module_info.name }}ViewOutput!
 
-    // MARK: Outlets
-    // TODO
+    // MARK: - Outlets
+    // TODO: Place your code here
 
-    // MARK: Vars
+    // MARK: - Vars
 
     private final let consumer: CacheTrackerPlainConsumer<{{ prefix }}{{ module_info.name }}ModuleEntityModel> = CacheTrackerPlainConsumer<{{ prefix }}{{ module_info.name }}ModuleEntityModel>()
 
-    // MARK: Life cycle
+    // MARK: - Life cycle
 
     override func viewDidLoad() {
         super.viewDidLoad()
@@ -26,7 +26,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UICollectionViewControll
         output.viewIsReady()
     }
 
-    // MARK: {{ prefix }}{{module_info.name}}ViewInput
+    // MARK: - {{ prefix }}{{module_info.name}}ViewInput
 
     func loadInitialModelsList(_ state: [CacheTransaction<{{ prefix }}{{ module_info.name }}ModuleEntityModel>]) {
         consumer.reset(with: state)
@@ -48,8 +48,8 @@ class {{ prefix }}{{ module_info.name }}ViewController: UICollectionViewControll
         consumer.didChange()
     }
 
-    // MARK: UI Actions
-    // TODO
+    // MARK: - UI Actions
+    // TODO: Place your code here
 
     // MARK: - UICollectionViewDataSource
 
@@ -64,7 +64,7 @@ class {{ prefix }}{{ module_info.name }}ViewController: UICollectionViewControll
         return cell
     }
 
-    // MARK: UICollectionViewDelegate
+    // MARK: - UICollectionViewDelegate
 
     override func collectionView(_ collectionView: UICollectionView, willDisplay cell: UICollectionViewCell, forItemAt indexPath: IndexPath) {
         let cell = cell as! {{ prefix }}{{ module_info.name }}ViewCell
@@ -78,16 +78,16 @@ class {{ prefix }}{{ module_info.name }}ViewController: UICollectionViewControll
 
     override func collectionView(_ collectionView: UICollectionView, didSelectItemAt indexPath: IndexPath) {
         //let model = consumer.object(at: indexPath.row)
-        // TODO
+        // TODO: Place your code here
     }
 
-    // MARK: Helpers
+    // MARK: - Helpers
 
     private final func setupConsumer() {
         consumer.delegate = self
     }
 
     private final func setupCollectioView() {
-        // TODO
+        // TODO: Place your code here
     }
 }
