--- a/Tests/Configurator/configurator_tests.swift.liquid
+++ b/Tests/Configurator/configurator_tests.swift.liquid
@@ -21,7 +21,7 @@ class {{ prefix }}{{ module_info.name }}ModuleConfiguratorTests: XCTestCase {
         let configurator = {{ prefix }}{{ module_info.name }}ModuleConfigurator()
         {% if custom_parameters.extended_configurator_create and custom_parameters.extended_configure %}
         {% if custom_parameters.extended_configure_vars %}{% assign module_config_vars = custom_parameters.extended_configure_vars  | split: "," %}
-        {% for config_var in module_config_vars %}{% assign var_components = config_var  | split: "=" %}let {{ var_components[0] }}: {{ var_components[1] }} = ... // TODO
+        {% for config_var in module_config_vars %}{% assign var_components = config_var  | split: "=" %}let {{ var_components[0] }}: {{ var_components[1] }} = ... // TODO: Place your code here
         {% endfor %}{% endif %}
         let config = {{ prefix }}{{ module_info.name }}ModuleInputConfig({% if custom_parameters.extended_configure_vars %}{% assign module_config_vars = custom_parameters.extended_configure_vars  | split: "," %}{% for config_var in module_config_vars %}{% assign var_components = config_var  | split: "=" %}{% if forloop.index0 != 0 %}, {% endif %}{{ var_components[0] }}: {{ var_components[0] }}{% endfor %}{% endif %})
         {% endif %}
