--- a/Tests/Presenter/presenter_tests.alert.swift.liquid
+++ b/Tests/Presenter/presenter_tests.alert.swift.liquid
@@ -16,17 +16,17 @@ class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
 
     class MockInteractor: {{ prefix }}{{ module_info.name }}InteractorInput {
 
-        // MARK: {{ prefix }}{{ module_info.name }}InteractorInput
-        // TODO
+        // MARK: - {{ prefix }}{{ module_info.name }}InteractorInput
+        // TODO: Place your code here
 
     }
 
     class MockRouter: {{ prefix }}{{ module_info.name }}RouterInput {
 
-        // MARK: Vars
-        // TODO
+        // MARK: - Vars
+        // TODO: Place your code here
 
-        // MARK: {{ prefix }}{{ module_info.name }}RouterInput
+        // MARK: - {{ prefix }}{{ module_info.name }}RouterInput
 
         func dismiss(_ completion: @escaping (() -> Void)) {
             DispatchQueue.main.async {
@@ -38,12 +38,12 @@ class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
 
     class MockViewController: {{ prefix }}{{ module_info.name }}ViewInput {
 
-        // MARK: Vars
+        // MARK: - Vars
 
         private final var title: String?
         private final var message: String?
 
-        // MARK: {{ prefix }}{{ module_info.name }}ViewInput
+        // MARK: - {{ prefix }}{{ module_info.name }}ViewInput
 
         func setAlertTitle(_ title: String?) {
             self.title = title
