--- a/Tests/Presenter/presenter_tests.swift.liquid
+++ b/Tests/Presenter/presenter_tests.swift.liquid
@@ -16,31 +16,31 @@ class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
 
     class MockInteractor: {{ prefix }}{{ module_info.name }}InteractorInput {
 
-        // MARK: Vars
-        // TODO
+        // MARK: - Vars
+        // TODO: Place your code here
 
-        // MARK: {{ prefix }}{{ module_info.name }}InteractorInput
-        // TODO
+        // MARK: - {{ prefix }}{{ module_info.name }}InteractorInput
+        // TODO: Place your code here
 
     }
 
     class MockRouter: {{ prefix }}{{ module_info.name }}RouterInput {
 
-        // MARK: Vars
-        // TODO
+        // MARK: - Vars
+        // TODO: Place your code here
 
-        // MARK: {{ prefix }}{{ module_info.name }}RouterInput
-        // TODO
+        // MARK: - {{ prefix }}{{ module_info.name }}RouterInput
+        // TODO: Place your code here
 
     }
 
     class MockViewController: {{ prefix }}{{ module_info.name }}ViewInput {
 
-        // MARK: Vars
-        // TODO
+        // MARK: - Vars
+        // TODO: Place your code here
 
-        // MARK: {{ prefix }}{{ module_info.name }}ViewInput
-        // TODO
+        // MARK: - {{ prefix }}{{ module_info.name }}ViewInput
+        // TODO: Place your code here
 
     }
 }
