add new service template

--- a/Code/Service/default_impl.swift.liquid
+++ b/Code/Service/default_impl.swift.liquid
@@ -4,6 +4,9 @@ import ViperServices
 
 class {{ prefix }}{{ module_info.name }}ServiceImpl: ViperService, {{ prefix }}{{ module_info.name }}Service {
 
+    // MARK: - Vars
+    // TODO: Place your code here
+
     // MARK: - ViperService
 
     func setupDependencies(_ container: ViperServicesContainer) -> [AnyObject]? {
