--- a/Code/Service/default_impl.swift.liquid
+++ b/Code/Service/default_impl.swift.liquid
@@ -14,7 +14,7 @@ class {{ prefix }}{{ module_info.name }}ServiceImpl: ViperService, {{ prefix }}{
         return nil
     }
 
-    func boot(launchOptions: [UIApplicationLaunchOptionsKey: Any]?, completion: @escaping ViperServiceBootCompletion) {
+    func boot(launchOptions: [UIApplication.LaunchOptionsKey: Any]?, completion: @escaping ViperServiceBootCompletion) {
         // TODO: Place your code here
         completion(.succeeded)
     }
