--- a/Code/Interactor/interactor_input.cachetracker.swift.liquid
+++ b/Code/Interactor/interactor_input.cachetracker.swift.liquid
@@ -5,7 +5,7 @@ import CacheTracker
 
 protocol {{ prefix }}{{ module_info.name }}InteractorInput: class {
 
-    // Models list
+    {% if custom_parameters.extended_configure %}func configure(with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig){% else %}func configure(){% endif %}
 
     func isDeliveringModelsListChanges() -> Bool
     func startDeliveringModelsListChanges()
