--- a/Code/Presenter/presenter.mcflurry.alert.swift.liquid
+++ b/Code/Presenter/presenter.mcflurry.alert.swift.liquid
@@ -61,6 +61,7 @@ class {{ prefix }}{{ module_info.name }}Presenter: NSObject, RamblerViperModuleI
         assert(state == .initial)
         state = .ready
         self.config = config
+        {% if custom_parameters.extended_configure %}interactor.configure(with: config){% else %}interactor.configure(){% endif %}
     }
 
     // MARK: - {{ prefix }}{{ module_info.name }}InteractorOutput
