--- a/Code/Presenter/presenter.swift.liquid
+++ b/Code/Presenter/presenter.swift.liquid
@@ -19,7 +19,8 @@ class {{ prefix }}{{ module_info.name }}Presenter: NSObject, {{ prefix }}{{ modu
     private final var state: {{ prefix }}{{ module_info.name }}PresenterState = .initial
 
     // MARK: - Vars
-    // TODO: Place your code here
+
+    {% if custom_parameters.extended_configure %}private final var config: {{ prefix }}{{ module_info.name }}ModuleInputConfig!{% else %}// TODO: Place your code here{% endif %}
 
     // MARK: - Life cycle
 
@@ -42,7 +43,10 @@ class {{ prefix }}{{ module_info.name }}Presenter: NSObject, {{ prefix }}{{ modu
     {% if custom_parameters.extended_configure %}func configure(with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig) {% else %}func configure() {% endif %}{
         assert(state == .initial)
         state = .ready
-        // TODO: Place your code here
+        {% if custom_parameters.extended_configure %}
+        self.config = config
+        interactor.configure(with: config)
+        {% else %}interactor.configure(){% endif %}
     }
 
     func setOutput(_ output: {{ prefix }}{{ module_info.name }}ModuleOutput) {
