--- a/Tests/Presenter/presenter_tests.alert.swift.liquid
+++ b/Tests/Presenter/presenter_tests.alert.swift.liquid
@@ -17,7 +17,10 @@ class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
     class MockInteractor: {{ prefix }}{{ module_info.name }}InteractorInput {
 
         // MARK: - {{ prefix }}{{ module_info.name }}InteractorInput
-        // TODO: Place your code here
+        
+        {% if custom_parameters.extended_configure %}func configure(with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig) {
+        }{% else %}func configure() {
+        }{% endif %}
 
     }
 
