--- a/Tests/Presenter/presenter_tests.cachetracker.swift.liquid
+++ b/Tests/Presenter/presenter_tests.cachetracker.swift.liquid
@@ -23,6 +23,10 @@ class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
 
         // MARK: - {{ prefix }}{{ module_info.name }}InteractorInput
 
+        {% if custom_parameters.extended_configure %}func configure(with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig) {
+        }{% else %}func configure() {
+        }{% endif %}
+
         func isDeliveringModelsListChanges() -> Bool {
             return tracking
         }
