--- a/Tests/Presenter/presenter_tests.complex.cachetracker.swift.liquid
+++ b/Tests/Presenter/presenter_tests.complex.cachetracker.swift.liquid
@@ -24,6 +24,10 @@ class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
 
         // MARK: - {{ prefix }}{{ module_info.name }}InteractorInput
 
+        {% if custom_parameters.extended_configure %}func configure(with config: {{ prefix }}{{ module_info.name }}ModuleInputConfig) {
+        }{% else %}func configure() {
+        }{% endif %}
+
         func isDeliveringModelsListChanges() -> Bool {
             return tracking
         }
@@ -62,10 +66,10 @@ class {{ prefix }}{{ module_info.name }}PresenterTest: XCTestCase {
                 return nil // or self.calleeOutput
             }
 
-            let nativeEmbedder = transitionHandler.createEmbeddableModule!(usingFactory: factory, configurationBlock: configurationBlock, lazyAllocation: lazyAllocation)!
+            let nativeEmbedder = transitionHandler.createEmbeddableModule!(usingFactory: factory, configurationBlock: configurationBlock, lazyAllocation: lazyAllocation)
 
             let embedder: {{ prefix }}{{ module_info.name }}EmbeddableEmbedBlock = { containerView in
-                let nativeRemover = nativeEmbedder(containerView)!
+                let nativeRemover = nativeEmbedder(containerView)
                 let  remover: {{ prefix }}{{ module_info.name }}EmbeddableRemoveBlock = {
                     nativeRemover()
                 }
